[package]
name = "cherries-rs"
version = "0.1.0"
authors = ["Mitama <loligothick@gmail.com>"]
edition = "2018"

[lib]
name = "cherries"

[dependencies]
uom = { version = "0.25.0", features = ["autoconvert", "usize", "u8", "u16", "u32", "u64", "u128", "isize", "i8", "i16", "i32", "i64", "i128"] }
regex = "1"
