[package]
name = "cherries"
version = "0.2.5"
authors = ["Mitama <loligothick@gmail.com>"]
edition = "2018"
description = "Expression tree logging"
documentation = "https://docs.rs/cherries"
repository = "https://github.com/LoliGothick/cherries-rs"
readme = "README.md"
keywords = ["logging", "expression-tree"]
license = "MIT"
#autobins = true
#autoexamples = true
#autotests = true
#autobenches = true
[lib]
name = "cherries"

[dependencies]
uom = { version = "0.25.0", features = ["autoconvert", "usize", "u8", "u16", "u32", "u64", "u128", "isize", "i8", "i16", "i32", "i64", "i128"] }
regex = "1"
serde = { version = "1.0.104", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0.48"
